Changelog
=========

2.0 - 2009-11-17
----------------

- Make sure the GenericSetup profile shows up on the Plone site add form.
  [davisagli]

- Added a metadata.xml to the GenericSetup profile.
  [davisagli]

- Register the ploneopenid-various GenericSetup import step using ZCML.
  [davisagli]

- Replaced the css_slot with the style_slot, as it is deprecated.
  [maurits]

- Made compatible with Plone 4.0.  Show different labels on login form
  when site_properties/use_email_as_login is switched on (Plone 4.0).
  Should still work in earlier Plones.
  Refs http://dev.plone.org/plone/ticket/9214
  [maurits]

- Made the addLoginPortlet function a bit more forgiving, when portlets aren't
  available.
  [hannosch]

- Added the z3c.autoinclude entry point so this package is automatically loaded
  on Plone 3.3 and above.
  [hannosch]

- Avoid a test dependency on quick installer.
  [hannosch]

- Use our own PloneMessageFactory and remove the dependency on CMFPlone.
  [hannosch]

- Specified package dependencies.
  [hannosch]

1.1.1 - unreleased
------------------

- Removed msgids in portlets.xml. There is no support for
  msgids in the import of portlets.xml implementation.
  This allows to extract translatable strings with i18ndude.
  [vincentfretin]

1.1 - 2008-08-19
----------------

- Added missing customized version of login_failed.cpt which was causing an
  error on a failed standard login when OpenID support is installed.  This closes
  http://dev.plone.org/plone/ticket/7268
  [davisagli]

- Now including plone.app.portlets in the zcml. Fixes zope instance
  startup error under certain circumstances.
  [maurits]

1.0.3 - 2008-04-21
------------------

- Added missing i18n markup to portlets.xml.
  [hannosch]

- Fixed erroneous (duplicate) translation ID. This fixes
  http://dev.plone.org/plone/ticket/7764
  [limi]

1.0.2 - 2008-05-07
------------------

- Correct the title of the portlet type to read 'OpenID Login' instead of
  just 'Login'.
  [wichert]
