@@ -26,15 +26,14 @@ class Renderer(base.Renderer):
         self.portal_state = getMultiAdapter((context, request), name=u'plone_portal_state')
         self.pas_info = getMultiAdapter((context, request), name=u'pas_info')
 
-
-    def show(self):
+    @property
+    def available(self):
         if not self.portal_state.anonymous():
             return False
         if not self.pas_info.hasOpenIDdExtractor():
             return False
         page = self.request.get('URL', '').split('/')[-1]
         return page not in ('login_form', 'join_form')
-
 
     def login_form(self):
         return '%s/login_form' % self.portal_state.portal_url()
